# fractals

./: .gitignore  BUILD.md  CARGO_PROFILING.md  Cargo.toml  DEPLOY.md  INSTALL.md  LINKS.md  README.md  Trunk.toml  canister_ids.json  canvas.circle.html  canvas.circle.js  canvas.js  canvas.mandelbrot.html  canvas.mandelbrot.js  canvas.rainbow.html  canvas.rainbow.js  dfx.json  fractal.sh  grass.sh  index.html  next.config.js  package-lock.json  package.json  vercel.json
.cargo/: config.toml
.github/workflows/: rust.yml
_old/: index.html  package.json
_old/canvas-js/: canvas.css
_old/canvas-wasm/: README.md  build.sh  clean.sh
_old/canvas-wasm/full/: full_wa.c  index.html
_old/canvas-wasm/minimal/: index.html  minimal_wa.c  minimal_wa.c.js
canvas-js/: canvas.mandelbrot.html
canvas-wasm/: README.md
canvas-wasm/full/: full_wa.c.js  full_wa.c.wasm  full_wa.c.wat  full_wa.js  full_wa.sh  index.html
canvas-wasm/minimal/: index.html  minimal_wa.c.js  minimal_wa.c.wasm  minimal_wa.c.wat  minimal_wa.js  minimal_wa.original.js  minimal_wa.sh
components/: FractalExplorer.jsx  Mandelbrot.jsx
components/controls/: FractalSelect.jsx  FractalSelect.module.less  ZoomControls.jsx  ZoomControls.module.less
css/: fractal.css  fractal.scss
fractals_cli/: Cargo.toml  README.md
pages/: index.js
rust/: Cargo.toml  build.sh  clean.sh
rust/.cargo/: config.toml
rust/src/: colormap.rs  lib.rs
src/: _wee_alloc.rs  fractal.rs  julia_set.rs  lib.rs  main.rs  utils.rs
src/components/: FractalExplorer.jsx  canvas_question.rs  fractal.rs  mod.rs
src/components/controls/: FractalSelect.jsx
src/components/v1/: canvas_question.rs  fractal.rs  select.rs
src/components/v2/: camera.rs  mod.rs  rectangle.rs
src/elements/: canvas_context.rs  canvas_context_websys.rs  mod.rs
src/html/: canvas_context_tryinto.rs  mod.rs
src/mathematics/: complex.rs  coords.rs  julia_set.rs  mod.rs
src/pages/: _app.js
src/services/: color_convert.rs  colors.rs  colorschemes.rs  coords.rs  mod.rs  resize_service.rs  resize_service_js.rs  timer.rs  vectors.rs
src/styles/: toolbar.less
src/utils/: canvas_context_anyhow.rs  mod.rs
styles/: canvas.less  globals.css
