# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fractals"
version = "0.1.0"
edition = "2018"



# [lib]
# crate-type = ["rlib", "cdylib"]   # Only required for wasm-pack



# DOCS: https://yew.rs/docs/advanced-topics/optimizations
[profile.release]
panic = 'abort'     # less code to include into binary
lto   = true        # link time optimization using using whole-program analysis
codegen-units = 1   # optimization over all codebase ( better optimization, slower build )
opt-level     = 'z' # optimization for size ( more aggressive )
# opt-level   = 's' # optimization for size

# DOCS: https://www.reddit.com/r/rust/comments/gvrgca/this_is_a_neat_trick_for_getting_good_runtime/
[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies in Development mode - they don't change often

[profile.dev]
opt-level = 1  # Turn on a small amount of optimisation in Development mode.



[dependencies]
anyhow = "1.0.58"
# bytemuck = "1.10.0"
# cfg-match = "0.2.1"
contracts = "0.6.3"
gloo-console = "0.2.1"
gloo-events = "0.1"
grass = "0.11.0"
num-complex = "0.4"
colors-transform = "0.2.11"
stdweb = "0.4.20"
stylist = "0.9"
wasm-bindgen = "0.2.81"
wee_alloc = "0.4.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew_styles = { version="0.11", features = ["navbar"]}

[dependencies.web-sys]
version = "0.3.58"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Performance",
    "Window",
]