# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fractals_cli"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"     # less code to include into binary
lto   = "fat"       # link time optimization using using whole-program analysis
codegen-units = 1   # singlethreaded optimization over all codebase ( better optimization, slower build )
opt-level     = 3   # optimization for speed

## DOCS: https://www.reddit.com/r/rust/comments/gvrgca/this_is_a_neat_trick_for_getting_good_runtime/
[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies in Development mode - they don't change often

[profile.dev]
opt-level = 1  # Turn on a small amount of optimisation in Development mode.


[[bin]]
name = "julia_image"
path = "src/bin/julia_image.rs"

[dependencies]
fractals = { path = ".." }
image = "0.24.2"
structopt = "0.3.26"
num-complex = "0.4"


